A bit more about Python.

--- a/1-python.ipynb
+++ b/1-python.ipynb
@@ -223,7 +223,8 @@
    "metadata": {},
    "source": [
     "In Jupyter, you can see what methods an object has by typing the object name, period, and then pressing tab.\n",
-    "Try it!"
+    "\n",
+    "Try it, say doing: `d.<TAB>`"
    ]
   },
   {
@@ -233,27 +234,25 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "d."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also see documentation about the method by typing the method name, an open parenthesis, and then pressing Shift-Tab."
+    "You can also see documentation about the method by typing the method name, an open parenthesis, and then pressing Shift-Tab.\n",
+    "\n",
+    "Try it, say doing: `d.pop(<SHIFT-TAB>`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "d.pop("
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -506,6 +505,34 @@
    "source": [
     "ab[-4:-2] = ['BIG', 'ONE']\n",
     "ab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unpacking\n",
+    "\n",
+    "We can assign several variables at once using the entries of lists or tuples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "second, third = ab[1:3]\n",
+    "third"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens if we try to unpack the wrong number of items?"
    ]
   },
   {
