plot.scatter is a new thing.

--- a/3-pandas.ipynb
+++ b/3-pandas.ipynb
@@ -216,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "df.plot.scatter(x='cheese', y='doctorates')"
+    "df.plot(kind='scatter', x='cheese', y='doctorates')"
    ]
   },
   {
@@ -555,7 +555,7 @@
     "axd = {'leap': axs[0], 'normal': axs[1]}\n",
     "\n",
     "for yt, df in g:\n",
-    "    df.plot.scatter(ax=axd[yt], x='cheese', y='doctorates', c='genome cost', title=yt)\n",
+    "    df.plot(kind='scatter', ax=axd[yt], x='cheese', y='doctorates', c='genome cost', title=yt)\n",
     "\n",
     "sns.despine()  # Removes the boxes around the plots."
    ]
