--- a/1-python.ipynb
+++ b/1-python.ipynb
@@ -708,6 +708,27 @@
    "source": [
     "' '.join(sl)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can also write multiline strings with triple quotes (using either ' or \")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "multiline = '''\n",
+    "This is often used\n",
+    "for documentation.\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
