An easier introduction.

--- a/1-python.ipynb
+++ b/1-python.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reminder about Python\n",
-    "\n",
-    "The following is not an introduction to Python, but a reminder about syntax and a couple of key points."
+    "# Python basics"
    ]
   },
   {
@@ -16,74 +14,56 @@
     "This is a Jupyter notebook.\n",
     "To evaluate a cell, press Shift-Enter or Ctrl-Enter. Shift-Enter moves you onto the next cell. \n",
     "The cells in this tutorial depend on each other, so evaluate them in order.\n",
-    "Take a minute to poke around the menus, looking at the keyboard shortcuts if that's your kind of thing."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prelaunch\n",
+    "Take a minute to poke around the menus, looking at the keyboard shortcuts if that's your kind of thing.\n",
     "\n",
-    "Python has many packages. \n",
-    "To make those available, use the `import` statement in various ways."
+    "To open up a new cell below your current cell, click on the `+` button.\n",
+    "\n",
+    "When you evaluate a cell, the result of the last operation is printed out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from os import getcwd\n",
-    "import numpy as np\n",
-    "import re\n",
-    "\n",
-    "print getcwd()\n",
-    "print np.log(10)\n",
-    "print re.sub('big', 'medium', 'big data')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Syntax\n",
-    "\n",
-    "### Functions, control flow, and loops"
+    "2+5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "range(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def square(x):\n",
-    "    if isinstance(x, int):\n",
-    "        return x*x\n",
-    "    elif isinstance(x, str):\n",
-    "        return x + \" is so square.\"\n",
-    "    else:\n",
-    "        return \"■\"\n",
-    "\n",
-    "for x in [3, 'Owning a car', 3.]:\n",
-    "    print square(x)"
+    "2+5\n",
+    "10+100"
    ]
   },
   {
@@ -92,6 +72,8 @@
     "collapsed": true
    },
    "source": [
+    "## Syntax\n",
+    "\n",
     "### Lists\n",
     "\n",
     "You can put various things in a list.\n",
@@ -100,14 +82,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'second'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "l = [square, 5]\n",
+    "l = ['first', 'second']\n",
     "l[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can add lists to concatenate them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['first', 'second', 'first', 'second']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l + l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Can you put numbers and strings together in the same list?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions, control flow, and loops\n",
+    "Here's how to call a function called `range`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To define a function, use the `def` keyword and then indent each following line of the function with four spaces."
    ]
   },
   {
@@ -118,7 +184,21 @@
    },
    "outputs": [],
    "source": [
-    "l[0](l[1])"
+    "def square(n):\n",
+    "    # Here we are in the function, and every line with this same indentation level is in the function.\n",
+    "    ans = n * n\n",
+    "    return ans\n",
+    "\n",
+    "# Now that we have left that indentation level, we are out of the function.\n",
+    "square(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What happens if you use varying numbers of spaces as indentation in a function definition?\n",
+    "* Write a function `cube` that cubes a number."
    ]
   },
   {
@@ -127,20 +207,30 @@
    "source": [
     "### Dictionaries\n",
     "\n",
-    "Dictionaries map \"keys\" to \"values."
+    "Dictionaries map \"keys\" to \"values.\"\n",
+    "You can initialize them like so:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tuba': 'Party'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'tuba': 'Party'}\n",
-    "d['plastic'] = ' skunk'\n",
-    "d[-24] = -5\n",
     "d"
    ]
   },
@@ -148,42 +238,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comprehensions\n",
+    "You can get values out of a dictionary by treating the key like an index:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Party'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['tuba']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* What happens if you ask for a key that is not there?\n",
     "\n",
-    "List and dictionary comprehensions are handy ways to make things."
+    "You can add a value to a dictionary by assigning using the key as an index:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'plastic': ' skunk', 'tuba': 'Party'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "[type(x) for x in l]"
+    "d['plastic'] = ' skunk'\n",
+    "d"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "[k + d[k] for k in d]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "{'fun '+str(k): d[k] for k in d}"
+    "* Try adding something to your dictionary. \n",
+    "* Can you use a non-string type as a key?"
    ]
   },
   {
@@ -193,7 +310,9 @@
     "### Objects\n",
     "\n",
     "Everything in Python is an object.\n",
-    "Given an object `x`, you can call methods using the period syntax. "
+    "This means that data types, such as strings, have functions associated with them called \"methods\".\n",
+    "Given an object `x`, you can call methods using the period syntax. \n",
+    "For example, we can get an uppercase version of a string using the `upper` method:"
    ]
   },
   {
@@ -258,6 +377,334 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Comprehensions\n",
+    "\n",
+    "List and dictionary comprehensions are handy ways to make things."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[str, str]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[type(x) for x in l]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tubaParty', 'plastic skunk']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[k + d[k] for k in d]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "{'fun '+str(k): d[k] for k in d}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python indexing\n",
+    "Let's play with strings to get used to Python's indexing rules."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ab = list('abcdefgh')\n",
+    "ab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Wait, what just happened when we applied the `list` function to a string?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['b', 'c']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ab[1:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Above: look carefully! `a[3]` is not included.\n",
+    "\n",
+    "We can also drop an index if we want to go all the way to the beginning of a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ab[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use negative numbers to index from the right side of the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ab[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ab[-2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ab[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ab[-4:-2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Indexing works for assignment too."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ab[-4:-2] = ['BIG', 'ONE']\n",
+    "ab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unpacking\n",
+    "\n",
+    "We can assign several variables at once using the entries of lists or tuples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "second, third = ab[1:3]\n",
+    "third"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens if we try to unpack the wrong number of items?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strings\n",
+    "\n",
+    "You may have noticed that there are two kinds of quotes in Python, single and double quotes.\n",
+    "They are equivalent, although one protects the other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print 'He said \"wow\".', \"That's kind of strange.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python has nice [string formatting](https://docs.python.org/2/library/string.html#format-string-syntax)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i, c in enumerate(a):\n",
+    "    print 'Entry {} is \"{}\".'.format(i+1, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sl = 'This is handy.'.split()\n",
+    "sl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "' '.join(sl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can also write multiline strings with triple quotes (using either ' or \")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "multiline = '''\n",
+    "This is often used\n",
+    "for documentation.\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More advanced topics\n",
+    "\n",
     "### Python \"variables\" are better thought of as nametags\n",
     "\n",
     "Python is a little different than other languages concerning how variables work. \n",
@@ -399,146 +846,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python indexing\n",
-    "Let's play with strings to get used to Python's indexing rules."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab = list('abcdefgh')\n",
-    "ab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below: look carefully! The third entry is not included."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab[1:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab[-2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab[:-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab[-4:-2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Indexing works for assignment too."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ab[-4:-2] = ['BIG', 'ONE']\n",
-    "ab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Unpacking\n",
-    "\n",
-    "We can assign several variables at once using the entries of lists or tuples."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "second, third = ab[1:3]\n",
-    "third"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What happens if we try to unpack the wrong number of items?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Generators, iterators, enumerators\n",
     "\n",
     "Generators are ways of expressing \"implicit\" lists but without having to store them in memory.\n",
@@ -644,90 +951,6 @@
    "outputs": [],
    "source": [
     "list(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Strings\n",
-    "\n",
-    "You may have noticed that there are two kinds of quotes in Python, single and double quotes.\n",
-    "They are equivalent, although one protects the other."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print 'He said \"wow\".', \"That's kind of strange.\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python has nice [string formatting](https://docs.python.org/2/library/string.html#format-string-syntax)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for i, c in enumerate(a):\n",
-    "    print 'Entry {} is \"{}\".'.format(i+1, c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "sl = 'This is handy.'.split()\n",
-    "sl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "' '.join(sl)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One can also write multiline strings with triple quotes (using either ' or \")."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "multiline = '''\n",
-    "This is often used\n",
-    "for documentation.\n",
-    "'''"
    ]
   }
  ],
