A first full version of a two class series.

--- a/1-python.ipynb
+++ b/1-python.ipynb
@@ -4,13 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python basics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Python basics\n",
+    "\n",
+    "[Note: <span style='color:red'> We will be teaching using Python 3. </span>\n",
+    "Be aware that many Python packages and installations use legacy Python 2, but moving forward it makes sense to use Python 3 unless you have a good reason to do otherwise.]\n",
+    "\n",
     "This is a Jupyter notebook.\n",
     "To evaluate a cell, press Shift-Enter or Ctrl-Enter. Shift-Enter moves you onto the next cell. \n",
     "The cells in this tutorial depend on each other, so evaluate them in order.\n",
@@ -23,47 +21,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2+5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "110"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "2+5\n",
     "10+100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "what = 'this is a string'\n",
+    "what"
    ]
   },
   {
@@ -82,22 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'second'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = ['first', 'second']\n",
     "l[1]"
@@ -112,22 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['first', 'second', 'first', 'second']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "l + l"
    ]
@@ -149,22 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "range(4)"
    ]
@@ -173,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To define a function, use the `def` keyword and then indent each following line of the function with four spaces."
+    "To define a function, use the `def` keyword, end the declaration with a colon, and then indent each following line of the function with four spaces."
    ]
   },
   {
@@ -205,6 +160,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If statements follow a similar syntax, with the statement to be tested and then a colon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if 4 > 3:\n",
+    "    print 'Sounds right.'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `elif` and `else` keywords determine what happens if the first statement is not true."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = -2\n",
+    "\n",
+    "if x > 0:\n",
+    "    print \"x is positive\"\n",
+    "elif x == 0:\n",
+    "    print \"x is zero\"\n",
+    "else:\n",
+    "    print \"x is negative\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Add a statement at the beginning of this chain of if statements testing if x is the string `\"tuba\"`.\n",
+    "\n",
+    "The most common loop in Python is the `for` loop, which has a similar syntax.\n",
+    "The following loop runs `print x` for every `x` in the list `l`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for x in l:\n",
+    "    print x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Change the looping varible from `x` to something else, for example `berry`.\n",
+    "* Use the `range` function to make a loop that prints out the first 10 numbers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dictionaries\n",
     "\n",
     "Dictionaries map \"keys\" to \"values.\"\n",
@@ -213,22 +242,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'tuba': 'Party'}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = {'tuba': 'Party'}\n",
     "d"
@@ -243,22 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Party'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d['tuba']"
    ]
@@ -274,22 +281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'plastic': ' skunk', 'tuba': 'Party'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d['plastic'] = ' skunk'\n",
     "d"
@@ -300,7 +296,7 @@
    "metadata": {},
    "source": [
     "* Try adding something to your dictionary. \n",
-    "* Can you use a non-string type as a key?"
+    "* Can you use a non-string type as a key for a dictionary?"
    ]
   },
   {
@@ -343,7 +339,7 @@
    "source": [
     "In Jupyter, you can see what methods an object has by typing the object name, period, and then pressing tab.\n",
     "\n",
-    "Try it, say doing: `d.<TAB>`"
+    "* Try it, say doing: `d.<TAB>`"
    ]
   },
   {
@@ -361,7 +357,7 @@
    "source": [
     "You can also see documentation about the method by typing the method name, an open parenthesis, and then pressing Shift-Tab.\n",
     "\n",
-    "Try it, say doing: `d.pop(<SHIFT-TAB>`"
+    "* Try it, say doing: `d.pop(<SHIFT-TAB>`"
    ]
   },
   {
@@ -377,6 +373,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Alternatively, you can also call the `help` function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "help(d.pop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modules\n",
+    "\n",
+    "Much of Python's power comes from collections of code called \"modules\".\n",
+    "You can import these modules using the `import` statement.\n",
+    "From there you call functions in the module with the same period syntax as for objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "math.log(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Can we call the `log` function without specifying that it is from the `math` module?\n",
+    "\n",
+    "As before with objects, you can tab-complete, or ask for help:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "help(math)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The [Python standard library](https://docs.python.org/3.5/library/) is a collection of modules that come with Python. \n",
+    "There are also many user-contributed packages, which are indexed on [PyPI](https://pypi.python.org/pypi) which need to be explicitly installed before you can use them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Import the `time` module and print the local time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Comprehensions\n",
     "\n",
     "List and dictionary comprehensions are handy ways to make things."
@@ -384,44 +457,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[str, str]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[type(x) for x in l]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['tubaParty', 'plastic skunk']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[k + d[k] for k in d]"
    ]
@@ -447,22 +498,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ab = list('abcdefgh')\n",
     "ab"
@@ -477,22 +517,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['b', 'c']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ab[1:3]"
    ]
@@ -651,8 +680,8 @@
    },
    "outputs": [],
    "source": [
-    "for i, c in enumerate(a):\n",
-    "    print 'Entry {} is \"{}\".'.format(i+1, c)"
+    "for letter in ab:\n",
+    "    print 'Now {} is my favorite.'.format(letter)"
    ]
   },
   {
