--- a/1-python.ipynb
+++ b/1-python.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If statements follow a similar syntax, with the statement to be tested and then a colon."
+    "`if` statements follow a similar syntax, with the statement to be tested and then a colon."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "if 4 > 3:\n",
-    "    print 'Sounds right.'"
+    "    print('Sounds right.')"
    ]
   },
   {
@@ -193,11 +193,11 @@
     "x = -2\n",
     "\n",
     "if x > 0:\n",
-    "    print \"x is positive\"\n",
+    "    print(\"x is positive\")\n",
     "elif x == 0:\n",
-    "    print \"x is zero\"\n",
+    "    print(\"x is zero\")\n",
     "else:\n",
-    "    print \"x is negative\""
+    "    print(\"x is negative\")"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "* Add a statement at the beginning of this chain of if statements testing if x is the string `\"tuba\"`.\n",
     "\n",
     "The most common loop in Python is the `for` loop, which has a similar syntax.\n",
-    "The following loop runs `print x` for every `x` in the list `l`."
+    "The following loop runs `print(x)` for every `x` in the list `l`."
    ]
   },
   {
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "for x in l:\n",
-    "    print x"
+    "    print(x)"
    ]
   },
   {
@@ -662,7 +662,7 @@
    },
    "outputs": [],
    "source": [
-    "print 'He said \"wow\".', \"That's kind of strange.\""
+    "print('He said \"wow\".', \"That's kind of strange.\")"
    ]
   },
   {
@@ -681,7 +681,7 @@
    "outputs": [],
    "source": [
     "for letter in ab:\n",
-    "    print 'Now {} is my favorite.'.format(letter)"
+    "    print('Now {} is my favorite.'.format(letter))"
    ]
   },
   {
@@ -725,7 +725,9 @@
     "multiline = '''\n",
     "This is often used\n",
     "for documentation.\n",
-    "'''"
+    "'''\n",
+    "\n",
+    "print(multiline)"
    ]
   },
   {
@@ -866,7 +868,7 @@
     "def noodle(l):\n",
     "    l[2] = 'different!'\n",
     "\n",
-    "print 'before: ', b\n",
+    "print('before: ', b)\n",
     "noodle(b)\n",
     "b"
    ]
@@ -968,7 +970,7 @@
    },
    "outputs": [],
    "source": [
-    "e.next()"
+    "next(e)"
    ]
   },
   {
@@ -985,21 +987,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
