--- a/2-pandas.ipynb
+++ b/2-pandas.ipynb
@@ -92,14 +92,14 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('2015_trip_data.csv')"
+    "data = pd.read_csv('/fh/fast/_ADM/SciComp/data/training/2015_trip_data.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Note: strings in Python can be defined either with double quotes or single quotes*"
+    "*Note: The file path above should work within the FH network. If you are not at the FH, then you can download this data at* <https://s3.amazonaws.com/pronto-data/open_data_year_one.zip>"
    ]
   },
   {
